--- a/xss/production/test/3js_materials.html
+++ b/xss/production/test/3js_materials.html
@@ -13,11 +13,11 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
-            <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
@@ -31,6 +31,7 @@ var canvas_position = {x:0, y:0};
 var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
+var my_sphere;var material_wireframe;var all_in_one;var __basic_material1;var __basic_material2;var __lambert_material1;var __lambert_material2;var __depth_material1;var __normal_material1;var __basic_material3;var __lambert_material3;var camera_1;var amb_light_1;var dir_light_1;var particle_1;var point_light_1;var plane_1;
 var application = {};
 application.events = new ev.EventHolder();
 		var streamer = new stream.Streamer();	
@@ -76,7 +77,6 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var my_sphere;var material_wireframe;var all_in_one;var __basic_material1;var __basic_material2;var __lambert_material1;var __lambert_material2;var __depth_material1;var __normal_material1;var __basic_material3;var __lambert_material3;var camera_1;var amb_light_1;var dir_light_1;var particle_1;var point_light_1;var plane_1;
     function create_my_sphere(
     radius,x_segments,y_segments ) { 
     var my_sphere;
@@ -132,25 +132,17 @@ map:new THREE.Texture(scene.streamer.get_resource('images/land_ocean_ice_cloud.j
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 2000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.z = 800;
-            camera_1.position.y = 200;
 	    amb_light_1 = 
 	    new THREE.AmbientLight(0x202020) ;
 	    scene.addLight(amb_light_1);
 	    dir_light_1 = 
 	    new THREE.DirectionalLight(Math.random() * 0xffffff, null, null, null) ;
 	    scene.addLight(dir_light_1);
-            dir_light_1.position.x = Math.random() - 0.5;
-            dir_light_1.position.y = Math.random() - 0.5;
-            dir_light_1.position.z = Math.random() - 0.5;
 			particle_1 = new THREE.Particle( 
 			new THREE.ParticleCanvasMaterial( 
 			{ color: White, program: program_fill, } 
 			) );	
 			scene.addObject( particle_1 );	
-            particle_1.scale.x = 5;
-            particle_1.scale.y = 5;
-            particle_1.scale.z = 5;
 	    point_light_1 = 
 	    new THREE.PointLight(White, 1, null) ;
 	    scene.addLight(point_light_1);
@@ -158,6 +150,14 @@ map:new THREE.Texture(scene.streamer.get_resource('images/land_ocean_ice_cloud.j
 	    plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
 	    scene.addObject(plane_1);
 		plane_1.events = new ev.EventHolder();
+            camera_1.position.z = 800;
+            camera_1.position.y = 200;
+            dir_light_1.position.x = Math.random() - 0.5;
+            dir_light_1.position.y = Math.random() - 0.5;
+            dir_light_1.position.z = Math.random() - 0.5;
+            particle_1.scale.x = 5;
+            particle_1.scale.y = 5;
+            particle_1.scale.z = 5;
             plane_1.position.y = -70;
             set_rotation_x(plane_1.rotation, -90);
             application.timer = null;
@@ -236,10 +236,14 @@ animate();
 function animate() {
 	if(ui_)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
+	renderer.domElement.getContext('2d').globalAlpha = 1;
 	requestAnimationFrame( animate );
 	render();
 	if(ui_)
+	{
+		drawingCanvas.getContext('2d').globalAlpha = 1;
 		ui_.draw(drawingCanvas.getContext('2d'));
+	}
 	}
 </script>
 </body>
