--- a/xss/production/test/jquery2.html
+++ b/xss/production/test/jquery2.html
@@ -22,7 +22,13 @@
                 		});
 	</script>
 	<style>
-	</style>
+#main {width : 600px;height : 400px}
+#r1 {background-color : Red;width : 100px}
+#r2 {width : 100px}
+#l1 {width : 100px}
+#t1 {height : 100px}
+#b1 {height : 100px}
+    </style>
 </head>
 <body>
 <div id="main">
