--- a/xss/production/test/ui_kitchen_sink.html
+++ b/xss/production/test/ui_kitchen_sink.html
@@ -6,8 +6,8 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
-            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/ui.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
 var drawingCanvas;	
 var streamer;	
@@ -30,7 +30,7 @@ var SoundUtils = new ui.SoundUtils();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 		var streamer = new stream.Streamer();	
 		var ResourceUtils = new stream.ResourceUtils();
 		var global_package = new stream.Package(streamer);	
@@ -248,13 +248,14 @@ function start(resolution)
         else
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
-		application.events.dispatch("updates", []);	
+		application.events.dispatch("updates", []);			
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(updater, resolution);  
+		window.setTimeout(updater, resolution);  
 	}    
 	window.setTimeout(updater, resolution);  
 }  
+var main;var test1;var title0;var lbl_event;var lbl0;var lbl1;var btn1;var stateBtn;var lbl3;var test2;var title1;var pb1;var btn2;var btn3;var lbl2;var lbl7;var monster;var test3;var title2;var c1;var r1;var p1;var line1;var lbl4;var lbl5;var lbl6;var lbl8;var btn5;var test4;var title3;var title4;var inst0;var clips;var ca1;var back_img;var ca2;var tb1;var inst1;var inst2;var inst3;var btnNext;var btnPrev;
             application.clicks = 0;
             application.do_rotation_plus = false;
             application.do_rotation_minus = false;
@@ -462,13 +463,62 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    main = new ui.Switch(g_ui_root.manager, g_ui_root);
+		    test1 = new ui.Component(main.manager, main);
+	    test1.mouse_thru = true;
+		    title0 = new ui.Label(test1.manager, test1, "12px Verdana");
+		    lbl_event = new ui.Label(test1.manager, test1, "12px Verdana");
+		    lbl0 = new ui.Label(test1.manager, test1, null);
+		    lbl1 = new ui.Label(test1.manager, test1, null);
+		    btn1 = new ui.Button(test1.manager, test1, "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    stateBtn = new ui.StateButton(test1.manager, test1, "images/smile_grin_48.png", "images/smile_sad_48.png");
+		    lbl3 = new ui.Label(test1.manager, test1, null);
+		    test2 = new ui.Component(main.manager, main);
+	    test2.mouse_thru = true;
+		    title1 = new ui.Label(test2.manager, test2, "12px Verdana");
+		    pb1 = new ui.ProgressBar(test2.manager, test2, null);
+		    btn2 = new ui.Image(test2.manager, test2, "images/arrow_left.png");
+		    btn3 = new ui.Image(test2.manager, test2, "images/arrow_right.png");
+		    lbl2 = new ui.Label(test2.manager, test2, null);
+		    lbl7 = new ui.Label(test2.manager, test2, "11px Verdana");
+		    monster = new ui.Sprite(test2.manager, test2);
+		    test3 = new ui.Component(main.manager, main);
+	    test3.mouse_thru = true;
+		    title2 = new ui.Label(test3.manager, test3, "12px Verdana");
+		    c1 = new ui.Circle(test3.manager, test3, "cyan", "black", 3);
+		    r1 = new ui.Rectangle(test3.manager, test3, "green", null, null);
+		    p1 = new ui.Polygon(test3.manager, test3, "pink", "brown", 3);
+		p1.points.push({id:"point1", x:300, y:300});
+		p1.points.push({id:"point2", x:300, y:250});
+		p1.points.push({id:"point3", x:210, y:230});
+		p1.points.push({id:"point4", x:250, y:300});
+		    line1 = new ui.Line(test3.manager, test3);
+		    lbl4 = new ui.Label(test3.manager, test3, "11px Verdana");
+		    lbl5 = new ui.Label(test3.manager, test3, "11px Verdana");
+		    lbl6 = new ui.Label(test3.manager, test3, "11px Verdana");
+		    lbl8 = new ui.Label(test3.manager, test3, "11px Verdana");
+		    btn5 = new ui.Button(test3.manager, test3, "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    test4 = new ui.Component(main.manager, main);
+	    test4.mouse_thru = true;
+		    title3 = new ui.Label(test4.manager, test4, "12px Verdana");
+		    title4 = new ui.Label(test4.manager, test4, "12px Verdana");
+		    inst0 = new ui.Label(test4.manager, test4, "12px Verdana");
+		    clips = new ui.Component(test4.manager, test4);
+	    clips.mouse_thru = true;
+		    ca1 = new ui.ClipArea(clips.manager, clips, "rect");
+	    ca1.mouse_thru = true;
+		    back_img = new ui.Image(clips.manager, clips, "images/smile_grin_48.png");
+		    ca2 = new ui.ClipArea(clips.manager, clips, "circle");
+	    ca2.mouse_thru = true;
+		    tb1 = new ui.TextButton(test4.manager, test4, "My_Button", "12px Arial");
+		    inst1 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
+		    inst2 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
+		    inst3 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
+		    btnNext = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
+		    btnPrev = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_left_green_48.png", "images/arrow_left_48.png");
             main.set_x(0);
             main.set_y(0);
             main.set_width(600);
             main.set_height(450);
-		    test1 = new ui.Component(main.manager, main);
-	    test1.mouse_thru = true;
-		    title0 = new ui.Label(test1.manager, test1, "12px Verdana");
             title0.set_x(50);
             title0.set_y(50);
             title0.text("This screen shows some buttons (1/4)");
@@ -482,7 +532,6 @@ title0.set_y(y - title0.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    lbl_event = new ui.Label(test1.manager, test1, "12px Verdana");
             lbl_event.set_x(240);
             lbl_event.set_y(120);
             lbl_event.text("Pass the mouse over this text...");
@@ -498,15 +547,12 @@ title0.set_y(y - title0.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    lbl0 = new ui.Label(test1.manager, test1, null);
             lbl0.set_x(240);
             lbl0.set_y(175);
             lbl0.text("Use keyboard arrows to move the first smiley");
-		    lbl1 = new ui.Label(test1.manager, test1, null);
             lbl1.set_x(330);
             lbl1.set_y(220);
             lbl1.text("Click this smiley to count");
-		    btn1 = new ui.Button(test1.manager, test1, "images/smile_sad_48.png", "images/smile_grin_48.png");
             btn1.set_x(270);
             btn1.set_y(200);
             btn1.set_width(50);
@@ -536,7 +582,6 @@ btn1.set_y(y - btnNext.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    stateBtn = new ui.StateButton(test1.manager, test1, "images/smile_grin_48.png", "images/smile_sad_48.png");
             stateBtn.set_x(270);
             stateBtn.set_y(300);
             stateBtn.set_width(50);
@@ -572,22 +617,16 @@ stateBtn.set_y(y - btnNext.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    lbl3 = new ui.Label(test1.manager, test1, null);
             lbl3.set_x(330);
             lbl3.set_y(340);
             lbl3.text("This smiley is a state button, click it");
-		    test2 = new ui.Component(main.manager, main);
-	    test2.mouse_thru = true;
-		    title1 = new ui.Label(test2.manager, test2, "12px Verdana");
             title1.set_x(50);
             title1.set_y(50);
             title1.text("This screen shows a percentage or progress bar and a sprite sheet animation (2/4)");
-		    pb1 = new ui.ProgressBar(test2.manager, test2, null);
             pb1.set_x(225);
             pb1.set_y(120);
             pb1.set_width(150);
             pb1.set_height(10);
-		    btn2 = new ui.Image(test2.manager, test2, "images/arrow_left.png");
             btn2.set_x(200);
             btn2.set_y(115);
             btn2.set_width(20);
@@ -616,7 +655,6 @@ btn2.set_y(y - btnNext.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    btn3 = new ui.Image(test2.manager, test2, "images/arrow_right.png");
             btn3.set_x(380);
             btn3.set_y(115);
             btn3.set_width(20);
@@ -645,17 +683,15 @@ btn3.set_y(y - btnNext.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    lbl2 = new ui.Label(test2.manager, test2, null);
             lbl2.set_x(210);
             lbl2.set_y(200);
             lbl2.text("Click small arrows to adjust percentage");
-		    lbl7 = new ui.Label(test2.manager, test2, "11px Verdana");
             lbl7.set_x(210);
             lbl7.set_y(270);
             lbl7.text("Press arrows on your keyboard to walk the zombie");
-		    monster = new ui.Sprite(test2.manager, test2, "monster_sheet");
             monster.set_x(300);
             monster.set_y(300);
+            monster.set_sheet("monster_sheet");
             monster.set_animation("m_idle");
 	monster.events.addListener("drag", function(x,y)
 	{    
@@ -667,13 +703,9 @@ monster.set_y(y - monster.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    test3 = new ui.Component(main.manager, main);
-	    test3.mouse_thru = true;
-		    title2 = new ui.Label(test3.manager, test3, "12px Verdana");
             title2.set_x(50);
             title2.set_y(50);
             title2.text("This screen shows a lot of figures (3/4)");
-		    c1 = new ui.Circle(test3.manager, test3, "cyan", "black", 3);
             c1.set_x(70);
             c1.set_y(70);
             c1.set_radius(60);
@@ -700,7 +732,6 @@ c1.set_line_width(c1.line_width - 1);
 	}
 	);
 		application.are_obj_events = true;
-		    r1 = new ui.Rectangle(test3.manager, test3, "green", null, null);
             r1.set_x(300);
             r1.set_y(100);
             r1.set_width(60);
@@ -731,7 +762,6 @@ r1.set_rotation(r1.get_rotation() - 5);
 	}
 	);
 		application.are_obj_events = true;
-		    p1 = new ui.Polygon(test3.manager, test3, "pink", "brown", 3);
             p1.alpha(40);
 	p1.events.addListener("drag", function(x,y)
 	{    
@@ -792,33 +822,23 @@ p1.setPointbyIndex(i, application.px, application.py);
 	}
 	);
 		application.are_obj_events = true;
-		p1.points.push({id:"point1", x:300, y:300});
-		p1.points.push({id:"point2", x:300, y:250});
-		p1.points.push({id:"point3", x:210, y:230});
-		p1.points.push({id:"point4", x:250, y:300});
-		    line1 = new ui.Line(test3.manager, test3);
             line1.set_x1(500);
             line1.set_y1(50);
             line1.set_x2(500);
             line1.set_y2(300);
             line1.set_color("red");
-		    lbl4 = new ui.Label(test3.manager, test3, "11px Verdana");
             lbl4.set_x(50);
             lbl4.set_y(400);
             lbl4.text("Click the circle pressing NUMPAD + or NUMPAD - to increment or decrement its linewidth");
-		    lbl5 = new ui.Label(test3.manager, test3, "11px Verdana");
             lbl5.set_x(50);
             lbl5.set_y(420);
             lbl5.text("Greeny the drunked rectangle and Pinky the polygon rotates like the other components, test it!!!");
-		    lbl6 = new ui.Label(test3.manager, test3, "11px Verdana");
             lbl6.set_x(50);
             lbl6.set_y(440);
             lbl6.text("Click the smiley to increment the black line width");
-		    lbl8 = new ui.Label(test3.manager, test3, "11px Verdana");
             lbl8.set_x(50);
             lbl8.set_y(460);
             lbl8.text("Use SHIFT/ALT with click to resize the polygon");
-		    btn5 = new ui.Button(test3.manager, test3, "images/smile_sad_48.png", "images/smile_grin_48.png");
             btn5.set_x(400);
             btn5.set_y(200);
             btn5.set_width(50);
@@ -847,59 +867,42 @@ btn5.set_y(y - btn5.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    test4 = new ui.Component(main.manager, main);
-	    test4.mouse_thru = true;
-		    title3 = new ui.Label(test4.manager, test4, "12px Verdana");
             title3.set_x(50);
             title3.set_y(50);
             title3.text("This screen shows two intersected clip area components with diferent forms");
-		    title4 = new ui.Label(test4.manager, test4, "12px Verdana");
             title4.set_x(50);
             title4.set_y(70);
             title4.text("over a tiled image and the text button(4/4)");
-		    inst0 = new ui.Label(test4.manager, test4, "12px Verdana");
             inst0.set_x(70);
             inst0.set_y(90);
             inst0.text("Use arrows to move the rect and WASD to move the circle");
-		    clips = new ui.Component(test4.manager, test4);
-	    clips.mouse_thru = true;
-		    ca1 = new ui.ClipArea(clips.manager, clips, "rect");
-	    ca1.mouse_thru = true;
             ca1.set_x(90);
             ca1.set_y(100);
             ca1.set_width(200);
             ca1.set_height(220);
             ca1.shape = "rect";
-		    back_img = new ui.Image(clips.manager, clips, "images/smile_grin_48.png");
             back_img.set_x(0);
             back_img.set_y(0);
             back_img.set_width(400);
             back_img.set_height(400);
             back_img.set_iwidth(120);
             back_img.set_iheight(40);
-		    ca2 = new ui.ClipArea(clips.manager, clips, "circle");
-	    ca2.mouse_thru = true;
             ca2.set_x(100);
             ca2.set_y(160);
             ca2.set_width(200);
             ca2.set_height(200);
             ca2.shape = "circle";
-		    tb1 = new ui.TextButton(test4.manager, test4, "My_Button", "12px Arial");
             tb1.set_x(400);
             tb1.set_y(400);
-		    inst1 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
             inst1.set_x(50);
             inst1.set_y(480);
             inst1.text("Click on this arrows to change the screen");
-		    inst2 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
             inst2.set_x(50);
             inst2.set_y(500);
             inst2.text("Use NUMPAD + or NUMPAD - keys with click over a component to rotate it");
-		    inst3 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
             inst3.set_x(50);
             inst3.set_y(520);
             inst3.text("Use CTRL + mouse drag over a component to drag it");
-		    btnNext = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
             btnNext.set_x(320);
             btnNext.set_y(550);
             btnNext.set_width(50);
@@ -931,7 +934,6 @@ btnNext.set_y(y - btnNext.h / 2);
 	}
 	);
 		application.are_obj_events = true;
-		    btnPrev = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_left_green_48.png", "images/arrow_left_48.png");
             btnPrev.set_x(220);
             btnPrev.set_y(550);
             btnPrev.set_width(50);
@@ -976,7 +978,7 @@ btnPrev.set_y(y - btnPrev.h / 2);
 				ui_.keypress(ev.keyCode);                  
 			};
             application.events.dispatch("init", []);
-            start();
+            start();			
 			ui_.draw(drawingCanvas.getContext('2d'));
 		});
 	}
