--- a/xss/production/test/3js-ui.html
+++ b/xss/production/test/3js-ui.html
@@ -10,15 +10,15 @@
 </style>
             <script type="text/javascript" src="../js/resig.js"></script>
             <script type="text/javascript" src="../js/event.js"></script>
+            <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
-            <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
+            <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
-            <script type="text/javascript" src="../js/ui.js"></script>
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
@@ -33,6 +33,7 @@ var streamer;
 var app_width = 600;
 var app_height = 600;
 var lbl0;var btn1;var lbl2;
+var materials;var __basic_material1;var __basic_material2;var __basic_material3;var __basic_material4;var __basic_material5;var __basic_material6;var plane_material;var camera_1;var cube_1;var plane_1;
 var application = {};
 application.events = new ev.EventHolder();
 		var streamer = new stream.Streamer();	
@@ -48,7 +49,7 @@ application.events = new ev.EventHolder();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 	// --------RESOURCES---------
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
@@ -104,7 +105,6 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var materials;var __basic_material1;var __basic_material2;var __basic_material3;var __basic_material4;var __basic_material5;var __basic_material6;var plane_material;var camera_1;var cube_1;var plane_1;
 threejs_load_resources(streamer, function()
 {
 			    materials = new Array() ;
@@ -135,22 +135,17 @@ color:Math.random() * 0xffffff
 plane_material = new THREE.MeshBasicMaterial({
 color:Grey
 	});
-            set_material_alpha(plane_material, 50);
 		    camera_1 = 
 		    new THREE.Camera(70, 1.5, 1, 1000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.y = 300;
-            camera_1.position.z = 500;
 	    cube_1_cube = new THREE.Cube(200, 200, 200, 1, 1, 1, materials, null, null) ;
 	    cube_1 = new THREE.Mesh(cube_1_cube, new THREE.MeshFaceMaterial());
 	    scene.addObject(cube_1);
 		cube_1.events = new ev.EventHolder();
-            cube_1.position.y = 150;
 	    plane_1_plane = new THREE.Plane(200, 200, null, null) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
 		plane_1.events = new ev.EventHolder();
-            set_rotation_x(plane_1.rotation, -1.57000005);
 	drawingCanvas.onmousemove = function(ev)
 	{
 		ui_.mousemove(ev.clientX - canvas_position.x, ev.clientY - canvas_position.y);                  
@@ -200,10 +195,16 @@ color:Grey
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
+		    btn1 = new ui.Button(g_ui_root.manager, g_ui_root, "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
+            set_material_alpha(plane_material, 50);
+            camera_1.position.y = 300;
+            camera_1.position.z = 500;
+            cube_1.position.y = 150;
+            set_rotation_x(plane_1.rotation, -1.57000005);
             lbl0.set_x(240);
             lbl0.set_y(75);
             lbl0.text("Click smile to count");
-		    btn1 = new ui.Button(g_ui_root.manager, g_ui_root, "images/smile_sad_48.png", "images/smile_grin_48.png");
             btn1.set_placement("center");
             btn1.set_rotation(15);
             btn1.set_width(50);
@@ -216,7 +217,6 @@ application.clicks = application.clicks + 1;
 	}
 	);
 		application.are_obj_events = true;
-		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
             lbl2.set_x(240);
             lbl2.set_y(420);
             lbl2.text("Drag mouse to spin the cube");
@@ -292,10 +292,14 @@ animate();
 function animate() {
 	if(ui_)
 		drawingCanvas.getContext('2d').clearRect(0,0,600,600);
+	renderer.domElement.getContext('2d').globalAlpha = 1;
 	requestAnimationFrame( animate );
 	render();
 	if(ui_)
+	{
+		drawingCanvas.getContext('2d').globalAlpha = 1;
 		ui_.draw(drawingCanvas.getContext('2d'));
+	}
 	}
 </script>
 </body>
