--- a/xss/production/test/3js_cameras.html
+++ b/xss/production/test/3js_cameras.html
@@ -30,6 +30,7 @@ var canvas_position = {x:0, y:0};
 var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
+var material_sphere1;var material_sphere2;var material_wireframe;var cylinder_material;var cylinder1_material;var cube_material;var cube1_material;var camera_1;var camera_1;var camera_2;var light;var sphere_1;var sphere_2;var cylinder_1;var cylinder_2;var cube_1;var cube_2;var plane_1;
 var application = {};
 application.events = new ev.EventHolder();
 // --------RESOURCES---------
@@ -50,7 +51,6 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_2);
 application.events.dispatch("switch_cameras", []);
 }
-var material_sphere1;var material_sphere2;var material_wireframe;var cylinder_material;var cylinder1_material;var cube_material;var cube1_material;var camera_1;var camera_1;var camera_2;var light;var sphere_1;var sphere_2;var cylinder_1;var cylinder_2;var cube_1;var cube_2;var plane_1;
 threejs_load_resources(streamer, function()
 {
 material_sphere1 = new THREE.MeshLambertMaterial({
@@ -78,70 +78,70 @@ camera_1 = new THREE.QuakeCamera({
 fov:50,aspect:1.5,near:1,far:10000,movementSpeed:70,lookSpeed:0.0500000007,noFly:true,lookVertical:false
 	});
 		active_camera = camera_1;
-            camera_1.position.x = -250;
-            camera_1.position.y = 25;
 		    camera_2 = 
 		    new THREE.Camera(50, 1.5, 1, 10000, null) ;	
 		active_camera = camera_2;
-            camera_2.position.x = -250;
-            camera_2.position.y = 25;
 	    light = 
 	    new THREE.DirectionalLight(16777215, null, null, null) ;
 	    scene.addLight(light);
-            light.position.y = 0.5;
-            light.position.z = 1;
 	    sphere_1_sphere = new THREE.Sphere(20, 32, 16) ;
 	    sphere_1 = new THREE.Mesh(sphere_1_sphere, material_sphere1);
 	    scene.addObject(sphere_1);
 		sphere_1.events = new ev.EventHolder();
-            sphere_1.position.x = 250;
-            sphere_1.position.y = 30;
 	    sphere_2_sphere = new THREE.Sphere(20, 32, 16) ;
 	    sphere_2 = new THREE.Mesh(sphere_2_sphere, material_sphere2);
 	    scene.addObject(sphere_2);
 		sphere_2.events = new ev.EventHolder();
-            sphere_2.position.x = -250;
-            sphere_2.position.y = 30;
 	    cylinder_1_cylinder = new THREE.Cylinder(20, 10, 10, 50, null, null) ;
 	    cylinder_1 = new THREE.Mesh(cylinder_1_cylinder, cylinder_material);
 	    scene.addObject(cylinder_1);
 		cylinder_1.events = new ev.EventHolder();
+	    cylinder_2_cylinder = new THREE.Cylinder(20, 10, 10, 50, null, null) ;
+	    cylinder_2 = new THREE.Mesh(cylinder_2_cylinder, cylinder1_material);
+	    scene.addObject(cylinder_2);
+		cylinder_2.events = new ev.EventHolder();
+	    cube_1_cube = new THREE.Cube(30, 30, 30, null, null, null, null, null, null) ;
+	    cube_1 = new THREE.Mesh(cube_1_cube, cube_material);
+	    scene.addObject(cube_1);
+		cube_1.events = new ev.EventHolder();
+	    cube_2_cube = new THREE.Cube(30, 30, 30, null, null, null, null, null, null) ;
+	    cube_2 = new THREE.Mesh(cube_2_cube, cube1_material);
+	    scene.addObject(cube_2);
+		cube_2.events = new ev.EventHolder();
+	    plane_1_plane = new THREE.Plane(1000, 1000, 100, 100) ;
+	    plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
+	    scene.addObject(plane_1);
+		plane_1.events = new ev.EventHolder();
+            camera_1.position.x = -250;
+            camera_1.position.y = 25;
+            camera_2.position.x = -250;
+            camera_2.position.y = 25;
+            light.position.y = 0.5;
+            light.position.z = 1;
+            sphere_1.position.x = 250;
+            sphere_1.position.y = 30;
+            sphere_2.position.x = -250;
+            sphere_2.position.y = 30;
             set_rotation_x(cylinder_1.rotation, 212);
             set_rotation_y(cylinder_1.rotation, 212);
             cylinder_1.position.x = 100;
             cylinder_1.position.y = 30;
             cylinder_1.position.z = 100;
-	    cylinder_2_cylinder = new THREE.Cylinder(20, 10, 10, 50, null, null) ;
-	    cylinder_2 = new THREE.Mesh(cylinder_2_cylinder, cylinder1_material);
-	    scene.addObject(cylinder_2);
-		cylinder_2.events = new ev.EventHolder();
             set_rotation_x(cylinder_2.rotation, 212);
             set_rotation_y(cylinder_2.rotation, 212);
             cylinder_2.position.x = -100;
             cylinder_2.position.y = 30;
             cylinder_2.position.z = 100;
-	    cube_1_cube = new THREE.Cube(30, 30, 30, null, null, null, null, null, null) ;
-	    cube_1 = new THREE.Mesh(cube_1_cube, cube_material);
-	    scene.addObject(cube_1);
-		cube_1.events = new ev.EventHolder();
             cube_1.position.x = -100;
             cube_1.position.y = 30;
             cube_1.position.z = -100;
             set_rotation_x(cube_1.rotation, 212);
             set_rotation_y(cube_1.rotation, 212);
-	    cube_2_cube = new THREE.Cube(30, 30, 30, null, null, null, null, null, null) ;
-	    cube_2 = new THREE.Mesh(cube_2_cube, cube1_material);
-	    scene.addObject(cube_2);
-		cube_2.events = new ev.EventHolder();
             cube_2.position.x = 100;
             cube_2.position.y = 30;
             cube_2.position.z = -100;
             set_rotation_x(cube_2.rotation, 212);
             set_rotation_y(cube_2.rotation, 212);
-	    plane_1_plane = new THREE.Plane(1000, 1000, 100, 100) ;
-	    plane_1 = new THREE.Mesh(plane_1_plane, material_wireframe);
-	    scene.addObject(plane_1);
-		plane_1.events = new ev.EventHolder();
             plane_1.position.y = 0.100000001;
             set_rotation_x(plane_1.rotation, -90);
             application.is_quake_camera = false;
@@ -202,10 +202,14 @@ animate();
 function animate() {
 	if(ui_)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
+	renderer.domElement.getContext('2d').globalAlpha = 1;
 	requestAnimationFrame( animate );
 	render();
 	if(ui_)
+	{
+		drawingCanvas.getContext('2d').globalAlpha = 1;
 		ui_.draw(drawingCanvas.getContext('2d'));
+	}
 	}
 </script>
 </body>
