--- a/xss/production/test/3js_carousel.html
+++ b/xss/production/test/3js_carousel.html
@@ -11,15 +11,15 @@
 </style>
             <script type="text/javascript" src="../js/resig.js"></script>
             <script type="text/javascript" src="../js/event.js"></script>
+            <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
-            <script type="text/javascript" src="../js/utils.js"></script>
+            <script type="text/javascript" src="../js/ui.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
-            <script type="text/javascript" src="../js/streamer.js"></script>
-            <script type="text/javascript" src="../js/ui.js"></script>
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
@@ -34,6 +34,7 @@ var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var __label1;var lbl1;
+var img_plane;var img_reflect;var camera_1;
 var application = {};
 application.events = new ev.EventHolder();
 		if(drawingCanvas){
@@ -47,7 +48,7 @@ application.events = new ev.EventHolder();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 		var streamer = new stream.Streamer();	
 		var ResourceUtils = new stream.ResourceUtils();
 	// --------RESOURCES---------
@@ -147,13 +148,29 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var img_plane;var img_reflect;var camera_1;
     function create_my_plane(
      ) { 
     var my_plane;
 			my_plane = new THREE.Object3D();
 			my_plane.events = new ev.EventHolder();
         var this__ = my_plane;
+            var img_plane;
+	    img_plane_plane = new THREE.Plane(128, 164, null, null) ;
+	    img_plane = new THREE.Mesh(img_plane_plane, new THREE.MeshBasicMaterial());
+	    scene.addObject(img_plane);
+		img_plane.events = new ev.EventHolder();
+				my_plane.addChild(img_plane);
+            var img_reflect;
+	    img_reflect_plane = new THREE.Plane(128, 164, null, null) ;
+	    img_reflect = new THREE.Mesh(img_reflect_plane, new THREE.MeshBasicMaterial());
+	    scene.addObject(img_reflect);
+		img_reflect.events = new ev.EventHolder();
+				my_plane.addChild(img_reflect);
+            img_reflect.doubleSided = true;
+            set_object_alpha(img_reflect, 40);
+            img_reflect.scale.y = 0.800000012;
+            img_reflect.position.y = -131.199997;
+            set_rotation_x(img_reflect.rotation, 180);
 	my_plane.set_image = function(value) 
 	{
 		set_transform_image(my_plane, value);
@@ -172,23 +189,6 @@ my_plane.scale.y = 1;
 	}
 	);
 		application.are_obj_events = true;
-            var img_plane;
-	    img_plane_plane = new THREE.Plane(128, 164, null, null) ;
-	    img_plane = new THREE.Mesh(img_plane_plane, new THREE.MeshBasicMaterial());
-	    scene.addObject(img_plane);
-		img_plane.events = new ev.EventHolder();
-				my_plane.addChild(img_plane);
-            var img_reflect;
-	    img_reflect_plane = new THREE.Plane(128, 164, null, null) ;
-	    img_reflect = new THREE.Mesh(img_reflect_plane, new THREE.MeshBasicMaterial());
-	    scene.addObject(img_reflect);
-		img_reflect.events = new ev.EventHolder();
-            img_reflect.doubleSided = true;
-            set_object_alpha(img_reflect, 40);
-            img_reflect.scale.y = 0.800000012;
-            img_reflect.position.y = -131.199997;
-            set_rotation_x(img_reflect.rotation, 180);
-				my_plane.addChild(img_reflect);
         return my_plane;
         }
 threejs_load_resources(streamer, function()
@@ -242,18 +242,18 @@ threejs_load_resources(streamer, function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    __label1 = new ui.Label(g_ui_root.manager, g_ui_root, "15px Verdana");
+		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "15px Verdana");
+		    camera_1 = 
+		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
+		active_camera = camera_1;
             __label1.set_x(150);
             __label1.set_y(75);
             __label1.set_color("Ivory");
             __label1.text("Move mouse to control the carousel movement");
-		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "15px Verdana");
             lbl1.set_x(175);
             lbl1.set_y(100);
             lbl1.set_color("Ivory");
             lbl1.text("Put the mouse over an image to zoom it");
-		    camera_1 = 
-		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
-		active_camera = camera_1;
             camera_1.position.x = 500;
             camera_1.position.y = 500;
             camera_1.position.z = 1000;
@@ -348,10 +348,14 @@ animate();
 function animate() {
 	if(ui_)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
+	renderer.domElement.getContext('2d').globalAlpha = 1;
 	requestAnimationFrame( animate );
 	render();
 	if(ui_)
+	{
+		drawingCanvas.getContext('2d').globalAlpha = 1;
 		ui_.draw(drawingCanvas.getContext('2d'));
+	}
 	}
 </script>
 </body>
