--- a/xss/production/test/3js_lights.html
+++ b/xss/production/test/3js_lights.html
@@ -11,8 +11,10 @@
 </style>
             <script type="text/javascript" src="../js/resig.js"></script>
             <script type="text/javascript" src="../js/event.js"></script>
+            <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
+            <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
@@ -30,6 +32,7 @@ var canvas_position = {x:0, y:0};
 var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
+var material_sphere1;var camera_1;var amb_light_1;var light1;var light2;var light3;var particle1;var particle2;var particle3;var sphere1;
 var application = {};
 application.events = new ev.EventHolder();
 		if(drawingCanvas){
@@ -43,7 +46,7 @@ application.events = new ev.EventHolder();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 	// --------RESOURCES---------
 // --------RESOURCES---------
 soundRenderer = new THREE.SoundRenderer();		
@@ -61,7 +64,6 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var material_sphere1;var camera_1;var amb_light_1;var light1;var light2;var light3;var particle1;var particle2;var particle3;var sphere1;
 threejs_load_resources(streamer, function()
 {
 	drawingCanvas.onmousemove = function(ev)
@@ -118,7 +120,6 @@ color:White,shading:flat_shading
 		    camera_1 = 
 		    new THREE.Camera(65, 1.5, 1, 1000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.z = 100;
 	    amb_light_1 = 
 	    new THREE.AmbientLight(MidnightBlue) ;
 	    scene.addLight(amb_light_1);
@@ -136,29 +137,30 @@ color:White,shading:flat_shading
 			{ color: Red, program: program_fill, } 
 			) );	
 			scene.addObject( particle1 );	
-            particle1.scale.x = 0.5;
-            particle1.scale.y = 0.5;
-            particle1.scale.z = 0.5;
 			particle2 = new THREE.Particle( 
 			new THREE.ParticleCanvasMaterial( 
 			{ color: Lime, program: program_fill, } 
 			) );	
 			scene.addObject( particle2 );	
-            particle2.scale.x = 0.5;
-            particle2.scale.y = 0.5;
-            particle2.scale.z = 0.5;
 			particle3 = new THREE.Particle( 
 			new THREE.ParticleCanvasMaterial( 
 			{ color: Yellow, program: program_fill, } 
 			) );	
 			scene.addObject( particle3 );	
-            particle3.scale.x = 0.5;
-            particle3.scale.y = 0.5;
-            particle3.scale.z = 0.5;
 	    sphere1_sphere = new THREE.Sphere(20, 32, 16) ;
 	    sphere1 = new THREE.Mesh(sphere1_sphere, material_sphere1);
 	    scene.addObject(sphere1);
 		sphere1.events = new ev.EventHolder();
+            camera_1.position.z = 100;
+            particle1.scale.x = 0.5;
+            particle1.scale.y = 0.5;
+            particle1.scale.z = 0.5;
+            particle2.scale.x = 0.5;
+            particle2.scale.y = 0.5;
+            particle2.scale.z = 0.5;
+            particle3.scale.x = 0.5;
+            particle3.scale.y = 0.5;
+            particle3.scale.z = 0.5;
             application.time = null;
 	application.events.addListener("updates", function()
 	{    
@@ -222,10 +224,14 @@ animate();
 function animate() {
 	if(ui_)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
+	renderer.domElement.getContext('2d').globalAlpha = 1;
 	requestAnimationFrame( animate );
 	render();
 	if(ui_)
+	{
+		drawingCanvas.getContext('2d').globalAlpha = 1;
 		ui_.draw(drawingCanvas.getContext('2d'));
+	}
 	}
 </script>
 </body>
