--- a/xss/production/test/3js_package.html
+++ b/xss/production/test/3js_package.html
@@ -34,6 +34,7 @@ var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var __label1;
+var camera_1;var plane_1;var plane_2;var plane_3;var container;var plane_4;var plane_5;
 var application = {};
 application.events = new ev.EventHolder();
 		var streamer = new stream.Streamer();	
@@ -49,7 +50,7 @@ application.events = new ev.EventHolder();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 	// --------RESOURCES---------
 		var global_package = new stream.Package(streamer);	
                 global_package.add_item(
@@ -148,7 +149,6 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var camera_1;var plane_1;var plane_2;var plane_3;var container;var plane_4;var plane_5;
 threejs_load_resources(streamer, function()
 {
 	drawingCanvas.onmousemove = function(ev)
@@ -200,55 +200,70 @@ threejs_load_resources(streamer, function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    __label1 = new ui.Label(g_ui_root.manager, g_ui_root, "15px Verdana");
-            __label1.set_x(150);
-            __label1.set_y(75);
-            __label1.set_color("Ivory");
-            __label1.text("Press click to load the package");
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.x = 500;
-            camera_1.position.y = 500;
-            camera_1.position.z = 1000;
 	    plane_1_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_1);
 		plane_1.events = new ev.EventHolder();
-            plane_1.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test1.png").data);
-            plane_1.position.x = 100;
-            plane_1.position.y = 100;
 	    plane_2_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_2 = new THREE.Mesh(plane_2_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_2);
 		plane_2.events = new ev.EventHolder();
-            plane_2.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test2.png").data);
-            plane_2.position.x = 300;
-            plane_2.position.y = 100;
 	    plane_3_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_3 = new THREE.Mesh(plane_3_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_3);
 		plane_3.events = new ev.EventHolder();
-            plane_3.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test3.png").data);
-            plane_3.position.x = 100;
-            plane_3.position.y = 300;
 				pack_1.events.addListener("loaded", function()
 				{				
 			    container = new THREE.Object3D() ;
 			container.events = new ev.EventHolder();
+});				
+				pack_1.events.addListener("loaded", function()
+				{				
 	    plane_4_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_4 = new THREE.Mesh(plane_4_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_4);
 		plane_4.events = new ev.EventHolder();
 				container.addChild(plane_4);
 				scene.addObject(container);
-            plane_4.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test4.png").data);
-            plane_4.position.x = -100;
+});				
+				pack_1.events.addListener("loaded", function()
+				{				
 	    plane_5_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_5 = new THREE.Mesh(plane_5_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_5);
 		plane_5.events = new ev.EventHolder();
 				container.addChild(plane_5);
 				scene.addObject(container);
+});
+            __label1.set_x(150);
+            __label1.set_y(75);
+            __label1.set_color("Ivory");
+            __label1.text("Press click to load the package");
+            camera_1.position.x = 500;
+            camera_1.position.y = 500;
+            camera_1.position.z = 1000;
+            plane_1.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test1.png").data);
+            plane_1.position.x = 100;
+            plane_1.position.y = 100;
+            plane_2.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test2.png").data);
+            plane_2.position.x = 300;
+            plane_2.position.y = 100;
+            plane_3.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test3.png").data);
+            plane_3.position.x = 100;
+            plane_3.position.y = 300;
+				pack_1.events.addListener("loaded", function()
+				{
+});
+				pack_1.events.addListener("loaded", function()
+				{
+            plane_4.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test4.png").data);
+            plane_4.position.x = -100;
+});
+				pack_1.events.addListener("loaded", function()
+				{
             plane_5.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test5.png").data);
             plane_5.position.x = -400;
 });
@@ -294,10 +309,14 @@ animate();
 function animate() {
 	if(ui_)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
+	renderer.domElement.getContext('2d').globalAlpha = 1;
 	requestAnimationFrame( animate );
 	render();
 	if(ui_)
+	{
+		drawingCanvas.getContext('2d').globalAlpha = 1;
 		ui_.draw(drawingCanvas.getContext('2d'));
+	}
 	}
 </script>
 </body>
