--- a/xss/production/test/3js_transform.html
+++ b/xss/production/test/3js_transform.html
@@ -11,14 +11,14 @@
 </style>
             <script type="text/javascript" src="../js/resig.js"></script>
             <script type="text/javascript" src="../js/event.js"></script>
+            <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
-            <script type="text/javascript" src="../js/utils.js"></script>
+            <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
-            <script type="text/javascript" src="../js/ui.js"></script>
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
@@ -33,6 +33,7 @@ var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var lbl0;var lbl1;var lbl2;
+var cylinder_material;var cube_material;var sphere_material;var camera_1;var light;var cylinder_1;var container;var cube_1;var sphere_1;
 var application = {};
 application.events = new ev.EventHolder();
 		if(drawingCanvas){
@@ -46,7 +47,7 @@ application.events = new ev.EventHolder();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 	// --------RESOURCES---------
 // --------RESOURCES---------
 soundRenderer = new THREE.SoundRenderer();		
@@ -64,7 +65,6 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var cylinder_material;var cube_material;var sphere_material;var camera_1;var light;var cylinder_1;var container;var cube_1;var sphere_1;
 threejs_load_resources(streamer, function()
 {
 	drawingCanvas.onmousemove = function(ev)
@@ -116,17 +116,8 @@ threejs_load_resources(streamer, function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-            lbl0.set_x(240);
-            lbl0.set_y(75);
-            lbl0.text("Move mouse to rotate the cylinder");
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-            lbl1.set_x(240);
-            lbl1.set_y(100);
-            lbl1.text("Move mouse pressing SHIFT to rotate the transform");
 		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Verdana");
-            lbl2.set_x(240);
-            lbl2.set_y(125);
-            lbl2.text("Move mouse pressing CTRL to rotate the camera horizontally");
 cylinder_material = new THREE.MeshBasicMaterial({
 color:Math.random() * 0xffffff
 	});
@@ -138,19 +129,13 @@ sphere_material = new THREE.MeshNormalMaterial({
 		    camera_1 = 
 		    new THREE.Camera(75, 1.5, 1, 3000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.z = 1000;
 	    light = 
 	    new THREE.DirectionalLight(Ivory, null, null, null) ;
 	    scene.addLight(light);
-            light.position.y = 0.5;
-            light.position.z = 1;
 	    cylinder_1_cylinder = new THREE.Cylinder(200, 100, 100, 500, null, null) ;
 	    cylinder_1 = new THREE.Mesh(cylinder_1_cylinder, cylinder_material);
 	    scene.addObject(cylinder_1);
 		cylinder_1.events = new ev.EventHolder();
-            set_rotation_x(cylinder_1.rotation, 70);
-            set_rotation_y(cylinder_1.rotation, 70);
-            cylinder_1.position.x = 600;
 			    container = new THREE.Object3D() ;
 			container.events = new ev.EventHolder();
 	    cube_1_cube = new THREE.Cube(300, 300, 300, null, null, null, null, null, null) ;
@@ -159,6 +144,27 @@ sphere_material = new THREE.MeshNormalMaterial({
 		cube_1.events = new ev.EventHolder();
 				container.addChild(cube_1);
 				scene.addObject(container);
+	    sphere_1_sphere = new THREE.Sphere(200, 20, 20) ;
+	    sphere_1 = new THREE.Mesh(sphere_1_sphere, sphere_material);
+	    scene.addObject(sphere_1);
+		sphere_1.events = new ev.EventHolder();
+				container.addChild(sphere_1);
+				scene.addObject(container);
+            lbl0.set_x(240);
+            lbl0.set_y(75);
+            lbl0.text("Move mouse to rotate the cylinder");
+            lbl1.set_x(240);
+            lbl1.set_y(100);
+            lbl1.text("Move mouse pressing SHIFT to rotate the transform");
+            lbl2.set_x(240);
+            lbl2.set_y(125);
+            lbl2.text("Move mouse pressing CTRL to rotate the camera horizontally");
+            camera_1.position.z = 1000;
+            light.position.y = 0.5;
+            light.position.z = 1;
+            set_rotation_x(cylinder_1.rotation, 70);
+            set_rotation_y(cylinder_1.rotation, 70);
+            cylinder_1.position.x = 600;
             cube_1.position.x = -600;
             cube_1.position.y = -100;
             set_rotation_x(cube_1.rotation, 70);
@@ -171,12 +177,6 @@ set_rotation_z(cube_1.rotation, get_rotation_z(cube_1.rotation) + 0.5);
 	}
 	);
 		application.are_obj_events = true;
-	    sphere_1_sphere = new THREE.Sphere(200, 20, 20) ;
-	    sphere_1 = new THREE.Mesh(sphere_1_sphere, sphere_material);
-	    scene.addObject(sphere_1);
-		sphere_1.events = new ev.EventHolder();
-				container.addChild(sphere_1);
-				scene.addObject(container);
             sphere_1.position.x = -400;
             sphere_1.position.y = 400;
             application.is_shift_down = false;
@@ -279,10 +279,14 @@ animate();
 function animate() {
 	if(ui_)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
+	renderer.domElement.getContext('2d').globalAlpha = 1;
 	requestAnimationFrame( animate );
 	render();
 	if(ui_)
+	{
+		drawingCanvas.getContext('2d').globalAlpha = 1;
 		ui_.draw(drawingCanvas.getContext('2d'));
+	}
 	}
 </script>
 </body>
