--- a/xss/production/test/animtest.html
+++ b/xss/production/test/animtest.html
@@ -6,9 +6,9 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
-            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/sequence.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
 var drawingCanvas;	
 var streamer;	
@@ -31,7 +31,7 @@ var SoundUtils = new ui.SoundUtils();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 		var g_sequence_manager = new state.Manager();
         function default_interpolate(a, b, t)
         {
@@ -76,13 +76,14 @@ function start(resolution)
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
 		g_sequence_manager.update(g_delta);
-		application.events.dispatch("updates", []);	
+		application.events.dispatch("updates", []);			
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(updater, resolution);  
+		window.setTimeout(updater, resolution);  
 	}    
 	window.setTimeout(updater, resolution);  
 }  
+var lbl1;var lbl2;var lbl3;var lbl4;var btn1;var btn2;var btn3;var btn4;
             application.click_count = 0;
 window.onload = function() 
 {
@@ -150,72 +151,13 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, null);
-            lbl1.text("Button 1 Stopped");
-            lbl1.set_x(10);
-            lbl1.set_y(10);
-            lbl1.set_width(140);
-            lbl1.set_height(35);
 		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, null);
-            lbl2.text("Button 2 Stopped");
-            lbl2.set_x(10);
-            lbl2.set_y(30);
-            lbl2.set_width(140);
-            lbl2.set_height(35);
 		    lbl3 = new ui.Label(g_ui_root.manager, g_ui_root, null);
-            lbl3.text("Button 3 Looping...");
-            lbl3.set_x(10);
-            lbl3.set_y(50);
-            lbl3.set_width(140);
-            lbl3.set_height(35);
 		    lbl4 = new ui.Label(g_ui_root.manager, g_ui_root, null);
-            lbl4.text("Button 4 Waiting For Click...");
-            lbl4.set_x(10);
-            lbl4.set_y(70);
-            lbl4.set_width(140);
-            lbl4.set_height(35);
 		    btn1 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-            btn1.set_x(40);
-            btn1.set_y(110);
-            btn1.set_width(43);
-            btn1.set_height(43);
-	btn1.events.addListener("click", function()
-	{    
-		anim1.start();
-	}
-	);
-		application.are_obj_events = true;
 		    btn2 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-            btn2.set_x(40);
-            btn2.set_y(160);
-            btn2.set_width(43);
-            btn2.set_height(43);
-	btn2.events.addListener("click", function()
-	{    
-		btn2.set_x(40);
-	}
-	);
-		application.are_obj_events = true;
 		    btn3 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-            btn3.set_x(40);
-            btn3.set_y(210);
-            btn3.set_width(43);
-            btn3.set_height(43);
-	btn3.events.addListener("click", function()
-	{    
-		application.click_count = application.click_count + 1;
-if (application.click_count == 4)
-{
-application.click_count = 0;
-anim3.start();
-}
-	}
-	);
-		application.are_obj_events = true;
 		    btn4 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-            btn4.set_x(40);
-            btn4.set_y(260);
-            btn4.set_width(43);
-            btn4.set_height(43);
 anim1 =
 new state.Sequence(
 g_sequence_manager);
@@ -356,6 +298,65 @@ g_sequence_manager);
                 }
             });
         }
+            lbl1.text("Button 1 Stopped");
+            lbl1.set_x(10);
+            lbl1.set_y(10);
+            lbl1.set_width(140);
+            lbl1.set_height(35);
+            lbl2.text("Button 2 Stopped");
+            lbl2.set_x(10);
+            lbl2.set_y(30);
+            lbl2.set_width(140);
+            lbl2.set_height(35);
+            lbl3.text("Button 3 Looping...");
+            lbl3.set_x(10);
+            lbl3.set_y(50);
+            lbl3.set_width(140);
+            lbl3.set_height(35);
+            lbl4.text("Button 4 Waiting For Click...");
+            lbl4.set_x(10);
+            lbl4.set_y(70);
+            lbl4.set_width(140);
+            lbl4.set_height(35);
+            btn1.set_x(40);
+            btn1.set_y(110);
+            btn1.set_width(43);
+            btn1.set_height(43);
+	btn1.events.addListener("click", function()
+	{    
+		anim1.start();
+	}
+	);
+		application.are_obj_events = true;
+            btn2.set_x(40);
+            btn2.set_y(160);
+            btn2.set_width(43);
+            btn2.set_height(43);
+	btn2.events.addListener("click", function()
+	{    
+		btn2.set_x(40);
+	}
+	);
+		application.are_obj_events = true;
+            btn3.set_x(40);
+            btn3.set_y(210);
+            btn3.set_width(43);
+            btn3.set_height(43);
+	btn3.events.addListener("click", function()
+	{    
+		application.click_count = application.click_count + 1;
+if (application.click_count == 4)
+{
+application.click_count = 0;
+anim3.start();
+}
+	}
+	);
+		application.are_obj_events = true;
+            btn4.set_x(40);
+            btn4.set_y(260);
+            btn4.set_width(43);
+            btn4.set_height(43);
 			document.onkeydown = function(ev)
 			{
 				ui_.keydown(ev.keyCode);                  
@@ -369,7 +370,7 @@ g_sequence_manager);
 				ui_.keypress(ev.keyCode);                  
 			};
             application.events.dispatch("init", []);
-            start();
+            start();			
 			ui_.draw(drawingCanvas.getContext('2d'));
 		});
 	}
