--- a/xss/production/test/jquery3.html
+++ b/xss/production/test/jquery3.html
@@ -15,16 +15,19 @@
 			var local = $("#local");
 			var remote = $("#remote");
 			var __img1 = $("#__img1");
-        tc1.tabs({
-            collapsible: true,
-        });
+            tc1.tabs({
+                collapsible: true,
+            });
 					__img1.attr("src", "images/img1.png");
                     if (application.init)
                         application.init();
                 		});
 	</script>
 	<style>
-	</style>
+#main {width : 600px;height : 400px}
+#tc1 {width : 400px}
+#__img1 {display : block;margin-left : auto;margin-right : auto}
+    </style>
 </head>
 <body>
 <div id="main">
