--- a/xss/production/test/jquery5.html
+++ b/xss/production/test/jquery5.html
@@ -37,12 +37,12 @@
 			var pb1 = $("#pb1");
 			var __br4 = $("#__br4");
 			var sld1 = $("#sld1");
-        acc1.accordion({
-            fillSpace: true,
+            acc1.accordion({
+                fillSpace: true,
+            });
+            tc1.tabs({
         });
-        tc1.tabs({
-    });
-        dp2.datepicker({
+            dp2.datepicker({
 		    beforeShow: function(input, inst) { 
 	     JQUComponent.set_visible(dp1, false);
 		    },
@@ -50,7 +50,7 @@
 	     JQUComponent.set_visible(dp1, true);
 		    },
 	    });
-        dp1.datepicker({
+            dp1.datepicker({
 		    onSelect: function(dateText, inst) { 
 	     alert(dateText);
 		    },
@@ -58,7 +58,7 @@
         var __acsource1 = [
     "Ambient", "Amphibious", "Anthropology", "Effervecent", "Emporium", "Entropy", "Indeed", "IPhone", "Impossible", "Obliquos", "Onerous", "Obnoxious", "Up?", "Usurpator", 
     ];
-        __autocomplete1.autocomplete({
+            __autocomplete1.autocomplete({
                 source: __acsource1,
             });
 		btn1.click( function() { 
@@ -68,17 +68,17 @@
         alert("Hello, World");
 			alert("Hello, World");
 		});
-        simple_dialog.dialog({
-            modal: true,
+            simple_dialog.dialog({
+                modal: true,
                 autoOpen: false,
             });
-        pb1.progressbar({
-            value: 37,
-        });
-        sld1.slider({
-            min: 0,
-            max: 100,
-            value: 37,
+            pb1.progressbar({
+                value: 37,
+            });
+            sld1.slider({
+                min: 0,
+                max: 100,
+                value: 37,
 		    change: function(event, ui) { 
 	     pb1.progressbar( "option", "value", sld1.slider( "option", "value" ));
 		    },
@@ -88,7 +88,11 @@
                 		});
 	</script>
 	<style>
-	</style>
+#main {width : 1200px}
+#acc1 {width : 300px}
+#tc1 {height : 400px}
+#__div9 {width : 350px}
+    </style>
 </head>
 <body>
 <div id="main">
