--- a/xss/production/test/jquery7.html
+++ b/xss/production/test/jquery7.html
@@ -11,9 +11,9 @@
             <script type="text/javascript" src="../js/jquery-ui-1.8.18.custom.min.js"></script>
             <script type="text/javascript" src="../js/jquery-idiom.js"></script>
             <link rel="stylesheet" href="../css/ui-lightness/jquery-ui-1.8.18.custom.css"></link>
-            <script type="text/javascript" src="../js/sequence.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/ui.js"></script>
+            <script type="text/javascript" src="../js/sequence.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
         var application = {};
@@ -48,7 +48,7 @@ var SoundUtils = new ui.SoundUtils();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 		var g_sequence_manager = new state.Manager();
         function default_interpolate(a, b, t)
         {
@@ -91,21 +91,22 @@ function start(resolution)
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
 		g_sequence_manager.update(g_delta);
-		application.events.dispatch("updates", []);	
+		application.events.dispatch("updates", []);			
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(updater, resolution);  
+		window.setTimeout(updater, resolution);  
 	}    
 	window.setTimeout(updater, resolution);  
 }  
+var img1;var img2;
         var fade_in = state.Sequence.extend(
     {
     init: function(
                 manager
                 )
     {
-        this._super(
-		manager        );
+			this._super(	
+			manager);       
         this.events = new ev.EventHolder(); 
         var this__  = this;
                 var this__ = this;
@@ -201,21 +202,7 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    img1 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-            img1.set_x(100);
-            img1.set_y(100);
-            img1.set_width(50);
-            img1.set_height(50);
-	img1.events.addListener("click", function()
-	{    
-		fade1.start();
-	}
-	);
-		application.are_obj_events = true;
 		    img2 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-            img2.set_x(160);
-            img2.set_y(100);
-            img2.set_width(50);
-            img2.set_height(50);
 fade1 =
 new fade_in(
 g_sequence_manager);
@@ -226,6 +213,20 @@ g_sequence_manager);
             fade2.target = img2;
             fade2.loop = true;
                 fade2.start();
+            img1.set_x(100);
+            img1.set_y(100);
+            img1.set_width(50);
+            img1.set_height(50);
+	img1.events.addListener("click", function()
+	{    
+		fade1.start();
+	}
+	);
+		application.are_obj_events = true;
+            img2.set_x(160);
+            img2.set_y(100);
+            img2.set_width(50);
+            img2.set_height(50);
 			document.onkeydown = function(ev)
 			{
 				ui_.keydown(ev.keyCode);                  
@@ -239,7 +240,7 @@ g_sequence_manager);
 				ui_.keypress(ev.keyCode);                  
 			};
             application.events.dispatch("init", []);
-            start();
+            start();			
 			ui_.draw(drawingCanvas.getContext('2d'));
 		});
 	}
@@ -250,12 +251,14 @@ g_sequence_manager);
                 		});
 	</script>
 	<style>
-	</style>
+#__div1 {position : relative}
+#__div2 {left : 0px;top : 0px;width : 200px;position : absolute}
+#edit1 {width : 252px}
+#app {left : 300px;top : 0px;width : 600px;height : 400px;position : absolute}
+    </style>
 </head>
 <body>
 <div id="__div1">
-            <table border="0" >
-            </table>
 <div id="__div2">
 				<label id="lbl1"
 			>
