--- a/xss/production/test/ms4.html
+++ b/xss/production/test/ms4.html
@@ -6,9 +6,9 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
-            <script type="text/javascript" src="../js/sequence.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/ui.js"></script>
+            <script type="text/javascript" src="../js/sequence.js"></script>
 <script type="text/javascript">
 var drawingCanvas;	
 var streamer;	
@@ -33,7 +33,7 @@ var SoundUtils = new ui.SoundUtils();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 		var g_sequence_manager = new state.Manager();
         function default_interpolate(a, b, t)
         {
@@ -76,21 +76,22 @@ function start(resolution)
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
 		g_sequence_manager.update(g_delta);
-		application.events.dispatch("updates", []);	
+		application.events.dispatch("updates", []);			
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(updater, resolution);  
+		window.setTimeout(updater, resolution);  
 	}    
 	window.setTimeout(updater, resolution);  
 }  
+var img1;var img2;
         var fade_in = state.Sequence.extend(
     {
     init: function(
                 manager
                 )
     {
-        this._super(
-		manager        );
+			this._super(	
+			manager);       
         this.events = new ev.EventHolder(); 
         var this__  = this;
                 var this__ = this;
@@ -186,21 +187,7 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    img1 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-            img1.set_x(100);
-            img1.set_y(100);
-            img1.set_width(50);
-            img1.set_height(50);
-	img1.events.addListener("click", function()
-	{    
-		fade1.start();
-	}
-	);
-		application.are_obj_events = true;
 		    img2 = new ui.Image(g_ui_root.manager, g_ui_root, "images/img1.png");
-            img2.set_x(160);
-            img2.set_y(100);
-            img2.set_width(50);
-            img2.set_height(50);
 fade1 =
 new fade_in(
 g_sequence_manager);
@@ -211,6 +198,20 @@ g_sequence_manager);
             fade2.target = img2;
             fade2.loop = true;
                 fade2.start();
+            img1.set_x(100);
+            img1.set_y(100);
+            img1.set_width(50);
+            img1.set_height(50);
+	img1.events.addListener("click", function()
+	{    
+		fade1.start();
+	}
+	);
+		application.are_obj_events = true;
+            img2.set_x(160);
+            img2.set_y(100);
+            img2.set_width(50);
+            img2.set_height(50);
 			document.onkeydown = function(ev)
 			{
 				ui_.keydown(ev.keyCode);                  
@@ -224,7 +225,7 @@ g_sequence_manager);
 				ui_.keypress(ev.keyCode);                  
 			};
             application.events.dispatch("init", []);
-            start();
+            start();			
 			ui_.draw(drawingCanvas.getContext('2d'));
 		});
 	}
