--- a/xss/production/test/ms5.html
+++ b/xss/production/test/ms5.html
@@ -6,8 +6,9 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
-            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/ui.js"></script>
+            <script type="text/javascript" src="../js/sequence.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
 var drawingCanvas;	
 var streamer;	
@@ -30,7 +31,7 @@ var SoundUtils = new ui.SoundUtils();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 		var g_sequence_manager = new state.Manager();
         function default_interpolate(a, b, t)
         {
@@ -201,13 +202,14 @@ function start(resolution)
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
 		g_sequence_manager.update(g_delta);
-		application.events.dispatch("updates", []);	
+		application.events.dispatch("updates", []);			
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(updater, resolution);  
+		window.setTimeout(updater, resolution);  
 	}    
 	window.setTimeout(updater, resolution);  
 }  
+var main;var test1;var lbl1;var btn1;var test2;var pb1;var btn2;var btn3;var lbl2;var btnNext;var btnPrev;
             application.clicks = 0;
 window.onload = function() 
 {
@@ -275,18 +277,26 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    main = new ui.Switch(g_ui_root.manager, g_ui_root);
+		    test1 = new ui.Component(main.manager, main);
+	    test1.mouse_thru = true;
+		    lbl1 = new ui.Label(test1.manager, test1, "Verdana");
+		    btn1 = new ui.Button(test1.manager, test1, "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    test2 = new ui.Component(main.manager, main);
+	    test2.mouse_thru = true;
+		    pb1 = new ui.ProgressBar(test2.manager, test2, null);
+		    btn2 = new ui.Image(test2.manager, test2, "images/arrow_left.png");
+		    btn3 = new ui.Image(test2.manager, test2, "images/arrow_right.png");
+		    lbl2 = new ui.Label(test2.manager, test2, "Verdana");
+		    btnNext = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
+		    btnPrev = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_left_green_48.png", "images/arrow_left_48.png");
             main.set_x(0);
             main.set_y(0);
             main.set_width(600);
             main.set_height(250);
-		    test1 = new ui.Component(main.manager, main);
-	    test1.mouse_thru = true;
-		    lbl1 = new ui.Label(test1.manager, test1, "Verdana");
             lbl1.set_x(270);
             lbl1.set_y(200);
             lbl1.set_rotation(-0.200000003);
             lbl1.text("click smiley");
-		    btn1 = new ui.Button(test1.manager, test1, "images/smile_sad_48.png", "images/smile_grin_48.png");
             btn1.set_placement("center");
             btn1.set_rotation(0.200000003);
             btn1.set_width(50);
@@ -299,13 +309,9 @@ btn1.set_rotation(btn1.get_rotation() + 0.200000003);
 	}
 	);
 		application.are_obj_events = true;
-		    test2 = new ui.Component(main.manager, main);
-	    test2.mouse_thru = true;
-		    pb1 = new ui.ProgressBar(test2.manager, test2, null);
             pb1.set_placement("center");
             pb1.set_width(150);
             pb1.set_height(10);
-		    btn2 = new ui.Image(test2.manager, test2, "images/arrow_left.png");
             btn2.set_x(200);
             btn2.set_y(115);
             btn2.set_width(20);
@@ -316,7 +322,6 @@ btn1.set_rotation(btn1.get_rotation() + 0.200000003);
 	}
 	);
 		application.are_obj_events = true;
-		    btn3 = new ui.Image(test2.manager, test2, "images/arrow_right.png");
             btn3.set_x(380);
             btn3.set_y(115);
             btn3.set_width(20);
@@ -327,12 +332,10 @@ btn1.set_rotation(btn1.get_rotation() + 0.200000003);
 	}
 	);
 		application.are_obj_events = true;
-		    lbl2 = new ui.Label(test2.manager, test2, "Verdana");
             lbl2.set_x(210);
             lbl2.set_y(200);
             lbl2.set_rotation(0.200000003);
             lbl2.text("click small arrows to adjust percentage");
-		    btnNext = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
             btnNext.set_x(320);
             btnNext.set_y(300);
             btnNext.set_width(100);
@@ -347,7 +350,6 @@ btnNext.set_rotation(btnNext.get_rotation() + 0.200000003);
 	}
 	);
 		application.are_obj_events = true;
-		    btnPrev = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_left_green_48.png", "images/arrow_left_48.png");
             btnPrev.set_x(220);
             btnPrev.set_y(300);
             btnPrev.set_rotation(0.400000006);
@@ -375,7 +377,7 @@ main.active(main.get_active() - 1);
 				ui_.keypress(ev.keyCode);                  
 			};
             application.events.dispatch("init", []);
-            start();
+            start();			
 			ui_.draw(drawingCanvas.getContext('2d'));
 		});
 	}
