--- a/xss/production/test/pixastic_test.html
+++ b/xss/production/test/pixastic_test.html
@@ -10,9 +10,10 @@
 </style>
             <script type="text/javascript" src="../js/resig.js"></script>
             <script type="text/javascript" src="../js/event.js"></script>
+            <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
-            <script type="text/javascript" src="../js/utils.js"></script>
+            <script type="text/javascript" src="../js/ui.js"></script>
             <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/pixastic/pixastic.core.js"></script>
             <script type="text/javascript" src="../js/pixastic/actions.js"></script>
@@ -22,7 +23,6 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
-            <script type="text/javascript" src="../js/ui.js"></script>
 <script type="text/javascript">		
 var renderer = new THREE.CanvasRenderer();	
 var ui_;
@@ -37,6 +37,7 @@ var streamer;
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var lbl0;var lbl1;var lbl2;var img1;var img2;var img3;var img4;
+var sphere_material;var camera_1;var plane1;var sphere1;var sphere2;var plane2;
 var application = {};
 application.events = new ev.EventHolder();
 		if(drawingCanvas){
@@ -50,7 +51,7 @@ application.events = new ev.EventHolder();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 		var streamer = new stream.Streamer();	
 		var ResourceUtils = new stream.ResourceUtils();
 	// --------RESOURCES---------
@@ -122,7 +123,6 @@ application.events.dispatch("updates", []);
 		set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var sphere_material;var camera_1;var plane1;var sphere1;var sphere2;var plane2;
 threejs_load_resources(streamer, function()
 {
 	drawingCanvas.onmousemove = function(ev)
@@ -174,71 +174,34 @@ threejs_load_resources(streamer, function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl0 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Arial");
-            lbl0.set_x(50);
-            lbl0.set_y(20);
-            lbl0.text("Brightness and contrast filter demo");
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Arial");
-            lbl1.set_x(50);
-            lbl1.set_y(40);
-            lbl1.text("Pass mouse over the Gioconda's elements to change their filter values");
 		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, "12px Arial");
-            lbl2.set_x(50);
-            lbl2.set_y(60);
-            lbl2.text("Press numpad + and - to increase or decrease resource filter values");
 		    img1 = new ui.Image(g_ui_root.manager, g_ui_root, "images/test1.png");
-            img1.set_x(50);
-            img1.set_y(100);
-            img1.set_width(128);
-            img1.set_height(164);
 		    img2 = new ui.Image(g_ui_root.manager, g_ui_root, "images/test2.png");
-            img2.set_x(50);
-            img2.set_y(450);
-            img2.set_width(60);
-            img2.set_height(100);
 		    img3 = new ui.Image(g_ui_root.manager, g_ui_root, "images/test2.png");
-            img3.set_x(150);
-            img3.set_y(450);
-            img3.set_width(60);
-            img3.set_height(100);
 		    img4 = new ui.Image(g_ui_root.manager, g_ui_root, "images/test2.png");
-            img4.set_x(250);
-            img4.set_y(450);
-            img4.set_width(60);
-            img4.set_height(100);
 sphere_material = new THREE.MeshBasicMaterial({
 map:new THREE.Texture(scene.streamer.get_resource('images/test1.png').data),
 	});
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.z = 1000;
 	    plane1_plane = new THREE.Plane(280, 320, null, null) ;
 	    plane1 = new THREE.Mesh(plane1_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane1);
 		plane1.events = new ev.EventHolder();
-            plane1.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test1.png").data);
-            plane1.position.x = -30;
-            set_rotation_y(plane1.rotation, -10);
 	    sphere1_sphere = new THREE.Sphere(150, null, null) ;
 	    sphere1 = new THREE.Mesh(sphere1_sphere, sphere_material);
 	    scene.addObject(sphere1);
 		sphere1.events = new ev.EventHolder();
-            sphere1.position.x = 400;
-            sphere1.position.y = -100;
 	    sphere2_sphere = new THREE.Sphere(150, null, null) ;
 	    sphere2 = new THREE.Mesh(sphere2_sphere, sphere_material);
 	    scene.addObject(sphere2);
 		sphere2.events = new ev.EventHolder();
-            sphere2.position.x = 400;
-            sphere2.position.y = 200;
 	    plane2_plane = new THREE.Plane(100, 100, null, null) ;
 	    plane2 = new THREE.Mesh(plane2_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane2);
 		plane2.events = new ev.EventHolder();
-            plane2.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test2.png").data);
-            plane2.position.x = -300;
-            plane2.position.y = -30;
-            set_rotation_y(plane2.rotation, -10);
 	    var preset_1 = new pixastic.Preset() ;
 			preset_1.pbf = new pixastic.Brightness(
 		50,0.5,null, preset_1);		
@@ -278,6 +241,43 @@ map:new THREE.Texture(scene.streamer.get_resource('images/test1.png').data),
             img3.f1.set_apply(0);
 			obtain_image(img3.f1, img3);
 			img3.put_on_apply = true;
+            lbl0.set_x(50);
+            lbl0.set_y(20);
+            lbl0.text("Brightness and contrast filter demo");
+            lbl1.set_x(50);
+            lbl1.set_y(40);
+            lbl1.text("Pass mouse over the Gioconda's elements to change their filter values");
+            lbl2.set_x(50);
+            lbl2.set_y(60);
+            lbl2.text("Press numpad + and - to increase or decrease resource filter values");
+            img1.set_x(50);
+            img1.set_y(100);
+            img1.set_width(128);
+            img1.set_height(164);
+            img2.set_x(50);
+            img2.set_y(450);
+            img2.set_width(60);
+            img2.set_height(100);
+            img3.set_x(150);
+            img3.set_y(450);
+            img3.set_width(60);
+            img3.set_height(100);
+            img4.set_x(250);
+            img4.set_y(450);
+            img4.set_width(60);
+            img4.set_height(100);
+            camera_1.position.z = 1000;
+            plane1.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test1.png").data);
+            plane1.position.x = -30;
+            set_rotation_y(plane1.rotation, -10);
+            sphere1.position.x = 400;
+            sphere1.position.y = -100;
+            sphere2.position.x = 400;
+            sphere2.position.y = 200;
+            plane2.materials[0].map = new THREE.Texture(scene.streamer.get_resource("images/test2.png").data);
+            plane2.position.x = -300;
+            plane2.position.y = -30;
+            set_rotation_y(plane2.rotation, -10);
 	application.events.addListener("click", function()
 	{    
 		img3.bf0.set_apply(!img3.bf0.apply_);
@@ -345,10 +345,14 @@ animate();
 function animate() {
 	if(ui_)
 		drawingCanvas.getContext('2d').clearRect(0,0,window.innerWidth,window.innerHeight);
+	renderer.domElement.getContext('2d').globalAlpha = 1;
 	requestAnimationFrame( animate );
 	render();
 	if(ui_)
+	{
+		drawingCanvas.getContext('2d').globalAlpha = 1;
 		ui_.draw(drawingCanvas.getContext('2d'));
+	}
 	}
 </script>
 </body>
