--- a/xss/production/test/ui_audio_1.html
+++ b/xss/production/test/ui_audio_1.html
@@ -6,8 +6,8 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
-            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/ui.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
 var drawingCanvas;	
 var streamer;	
@@ -30,7 +30,7 @@ var SoundUtils = new ui.SoundUtils();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 		var streamer = new stream.Streamer();	
 		var ResourceUtils = new stream.ResourceUtils();
 		var global_package = new stream.Package(streamer);	
@@ -139,13 +139,14 @@ function start(resolution)
         else
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
-		application.events.dispatch("updates", []);	
+		application.events.dispatch("updates", []);			
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(updater, resolution);  
+		window.setTimeout(updater, resolution);  
 	}    
 	window.setTimeout(updater, resolution);  
 }  
+var lbl1;var btnExplosion;var btnShoots;
 window.onload = function() 
 {
         drawingCanvas = document.getElementById("myCanvas");
@@ -212,10 +213,11 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
+		    btnExplosion = new ui.Button(g_ui_root.manager, g_ui_root, "images/bomb.png", "images/bomb.png");
+		    btnShoots = new ui.Button(g_ui_root.manager, g_ui_root, "images/AK-47.png", "images/AK-47.png");
             lbl1.set_x(220);
             lbl1.set_y(190);
             lbl1.text("click to create a new instance of a sound");
-		    btnExplosion = new ui.Button(g_ui_root.manager, g_ui_root, "images/bomb.png", "images/bomb.png");
             btnExplosion.set_x(290);
             btnExplosion.set_y(220);
             btnExplosion.set_width(50);
@@ -226,7 +228,6 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnShoots = new ui.Button(g_ui_root.manager, g_ui_root, "images/AK-47.png", "images/AK-47.png");
             btnShoots.set_x(275);
             btnShoots.set_y(300);
             btnShoots.set_width(100);
@@ -250,7 +251,7 @@ window.onload = function()
 				ui_.keypress(ev.keyCode);                  
 			};
             application.events.dispatch("init", []);
-            start();
+            start();			
 			ui_.draw(drawingCanvas.getContext('2d'));
 		});
 	}
