--- a/xss/production/test/ui_placement.html
+++ b/xss/production/test/ui_placement.html
@@ -6,8 +6,8 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
-            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/ui.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
 var drawingCanvas;	
 var streamer;	
@@ -30,7 +30,7 @@ var SoundUtils = new ui.SoundUtils();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 		var streamer = new stream.Streamer();	
 		var ResourceUtils = new stream.ResourceUtils();
 		var global_package = new stream.Package(streamer);	
@@ -111,13 +111,14 @@ function start(resolution)
         else
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
-		application.events.dispatch("updates", []);	
+		application.events.dispatch("updates", []);			
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(updater, resolution);  
+		window.setTimeout(updater, resolution);  
 	}    
 	window.setTimeout(updater, resolution);  
 }  
+var test1;var lbl0;var lbl2;var lbl3;var lbl4;var lbl1;var btn1;var btnRight;var btnLeft;var btnUp;var btnDown;
             application.clicks = 0;
             application.flag = true;
 	application.events.addListener("keydown", function(keycode)
@@ -258,31 +259,35 @@ window.onload = function()
 	});
 		    test1 = new ui.Component(g_ui_root.manager, g_ui_root);
 	    test1.mouse_thru = true;
+		    lbl0 = new ui.Label(test1.manager, test1, "12px Verdana");
+		    lbl2 = new ui.Label(test1.manager, test1, "12px Verdana");
+		    lbl3 = new ui.Label(test1.manager, test1, "12px Verdana");
+		    lbl4 = new ui.Label(test1.manager, test1, "12px Verdana");
+		    lbl1 = new ui.Label(test1.manager, test1, "12px Verdana");
+		    btn1 = new ui.Button(test1.manager, test1, "images/smile_sad_48.png", "images/smile_grin_48.png");
+		    btnRight = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
+		    btnLeft = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
+		    btnUp = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
+		    btnDown = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
             test1.set_x(100);
             test1.set_y(50);
             test1.set_width(400);
             test1.set_height(200);
-		    lbl0 = new ui.Label(test1.manager, test1, "12px Verdana");
             lbl0.set_x(240);
             lbl0.set_y(75);
             lbl0.text("Use keyb arrows to move div or btn");
-		    lbl2 = new ui.Label(test1.manager, test1, "12px Verdana");
             lbl2.set_x(240);
             lbl2.set_y(100);
             lbl2.text("Use +,- numpad to resize div");
-		    lbl3 = new ui.Label(test1.manager, test1, "12px Verdana");
             lbl3.set_x(240);
             lbl3.set_y(125);
             lbl3.text("Use CTRL/SHIFT to hide/show the div");
-		    lbl4 = new ui.Label(test1.manager, test1, "12px Verdana");
             lbl4.set_x(40);
             lbl4.set_y(150);
             lbl4.text("Use SPACE to unplace the button and clic the arrow buttons to replace it");
-		    lbl1 = new ui.Label(test1.manager, test1, "12px Verdana");
             lbl1.set_x(270);
             lbl1.set_y(200);
             lbl1.text("Click smiley");
-		    btn1 = new ui.Button(test1.manager, test1, "images/smile_sad_48.png", "images/smile_grin_48.png");
             btn1.set_width(50);
             btn1.set_height(50);
             btn1.set_placement("center");
@@ -293,7 +298,6 @@ application.clicks = application.clicks + 1;
 	}
 	);
 		application.are_obj_events = true;
-		    btnRight = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
             btnRight.set_x(320);
             btnRight.set_y(350);
             btnRight.set_width(50);
@@ -305,7 +309,6 @@ application.flag = true;
 	}
 	);
 		application.are_obj_events = true;
-		    btnLeft = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
             btnLeft.set_x(220);
             btnLeft.set_y(350);
             btnLeft.set_rotation(180);
@@ -318,7 +321,6 @@ application.flag = true;
 	}
 	);
 		application.are_obj_events = true;
-		    btnUp = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
             btnUp.set_x(270);
             btnUp.set_y(300);
             btnUp.set_rotation(-90);
@@ -331,7 +333,6 @@ application.flag = true;
 	}
 	);
 		application.are_obj_events = true;
-		    btnDown = new ui.Button(g_ui_root.manager, g_ui_root, "images/arrow_right_green_48.png", "images/arrow_right_48.png");
             btnDown.set_x(270);
             btnDown.set_y(400);
             btnDown.set_rotation(90);
@@ -357,7 +358,7 @@ application.flag = true;
 				ui_.keypress(ev.keyCode);                  
 			};
             application.events.dispatch("init", []);
-            start();
+            start();			
 			ui_.draw(drawingCanvas.getContext('2d'));
 		});
 	}
