--- a/xss/production/test/ui_video.html
+++ b/xss/production/test/ui_video.html
@@ -6,8 +6,8 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/utils.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
-            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/ui.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
 <script type="text/javascript">
 var drawingCanvas;	
 var streamer;	
@@ -30,7 +30,7 @@ var SoundUtils = new ui.SoundUtils();
 			var g_ui = ui_;
 			var g_ui_root = ui_.root;
 			var mouse_pressed = false;
-		}
+		}		
 		var streamer = new stream.Streamer();	
 		var ResourceUtils = new stream.ResourceUtils();
 		var global_package = new stream.Package(streamer);	
@@ -251,13 +251,14 @@ function start(resolution)
         else
 		    g_delta  = now - g_elapsed;  
         g_elapsed = now; 
-		application.events.dispatch("updates", []);	
+		application.events.dispatch("updates", []);			
 		var context = g_canvas.getContext('2d');
 		g_ui.update(g_delta, context);
-        window.setTimeout(updater, resolution);  
+		window.setTimeout(updater, resolution);  
 	}    
 	window.setTimeout(updater, resolution);  
 }  
+var v;var lbl1;var btnVolUp;var btnVolDown;var btnMute;var lbl2;var btnPlay;var btnPause;var btnStop;var lbl3;var btnRotLeft;var btnRotRight;
 	application.events.addListener("init", function()
 	{    
 		v.play();
@@ -329,15 +330,24 @@ window.onload = function()
 		application.events.dispatch("keydown", [keycode]);
 	});
 		    v = new ui.Video(g_ui_root.manager, g_ui_root, "video/gizmo.mp4");
+		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
+		    btnVolUp = new ui.Image(g_ui_root.manager, g_ui_root, "images/plus.png");
+		    btnVolDown = new ui.Image(g_ui_root.manager, g_ui_root, "images/minus.png");
+		    btnMute = new ui.StateButton(g_ui_root.manager, g_ui_root, "images/sound_on.png", "images/sound_off.png");
+		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
+		    btnPlay = new ui.Button(g_ui_root.manager, g_ui_root, "images/play.png", "images/play_over.png");
+		    btnPause = new ui.Button(g_ui_root.manager, g_ui_root, "images/pause.png", "images/pause_over.png");
+		    btnStop = new ui.Button(g_ui_root.manager, g_ui_root, "images/stop.png", "images/stop_over.png");
+		    lbl3 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
+		    btnRotLeft = new ui.Image(g_ui_root.manager, g_ui_root, "images/rota_left.png");
+		    btnRotRight = new ui.Image(g_ui_root.manager, g_ui_root, "images/rota_right.png");
             v.set_x(50);
             v.set_y(50);
             v.set_width(400);
             v.set_height(200);
-		    lbl1 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
             lbl1.set_x(40);
             lbl1.set_y(300);
             lbl1.text("Volume controls");
-		    btnVolUp = new ui.Image(g_ui_root.manager, g_ui_root, "images/plus.png");
             btnVolUp.set_x(20);
             btnVolUp.set_y(320);
             btnVolUp.set_width(30);
@@ -348,7 +358,6 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnVolDown = new ui.Image(g_ui_root.manager, g_ui_root, "images/minus.png");
             btnVolDown.set_x(60);
             btnVolDown.set_y(320);
             btnVolDown.set_width(30);
@@ -359,7 +368,6 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnMute = new ui.StateButton(g_ui_root.manager, g_ui_root, "images/sound_on.png", "images/sound_off.png");
             btnMute.set_x(100);
             btnMute.set_y(320);
             btnMute.set_width(30);
@@ -370,11 +378,9 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    lbl2 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
             lbl2.set_x(200);
             lbl2.set_y(300);
             lbl2.text("Playback controls");
-		    btnPlay = new ui.Button(g_ui_root.manager, g_ui_root, "images/play.png", "images/play_over.png");
             btnPlay.set_x(180);
             btnPlay.set_y(315);
             btnPlay.set_width(40);
@@ -385,7 +391,6 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnPause = new ui.Button(g_ui_root.manager, g_ui_root, "images/pause.png", "images/pause_over.png");
             btnPause.set_x(220);
             btnPause.set_y(315);
             btnPause.set_width(40);
@@ -396,7 +401,6 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnStop = new ui.Button(g_ui_root.manager, g_ui_root, "images/stop.png", "images/stop_over.png");
             btnStop.set_x(260);
             btnStop.set_y(315);
             btnStop.set_width(40);
@@ -407,11 +411,9 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    lbl3 = new ui.Label(g_ui_root.manager, g_ui_root, "Verdana");
             lbl3.set_x(360);
             lbl3.set_y(300);
             lbl3.text("Rotation controls");
-		    btnRotLeft = new ui.Image(g_ui_root.manager, g_ui_root, "images/rota_left.png");
             btnRotLeft.set_x(365);
             btnRotLeft.set_y(320);
             btnRotLeft.set_width(30);
@@ -422,7 +424,6 @@ window.onload = function()
 	}
 	);
 		application.are_obj_events = true;
-		    btnRotRight = new ui.Image(g_ui_root.manager, g_ui_root, "images/rota_right.png");
             btnRotRight.set_x(405);
             btnRotRight.set_y(320);
             btnRotRight.set_width(30);
@@ -446,7 +447,7 @@ window.onload = function()
 				ui_.keypress(ev.keyCode);                  
 			};
             application.events.dispatch("init", []);
-            start();
+            start();			
 			ui_.draw(drawingCanvas.getContext('2d'));
 		});
 	}
