--- a/xss/production/test/wgl_cube_img.html
+++ b/xss/production/test/wgl_cube_img.html
@@ -12,13 +12,14 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
 <script type="text/javascript">		
-var ui;
+var ui_;
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 var renderer = new THREE.WebGLRenderer( { antialias: false } );
 var canvas_position = {x:0, y:0};
@@ -189,27 +190,27 @@ map:THREE.ImageUtils.loadTexture(scene.streamer.get_resource('image_6').asset),
 plane_material = new THREE.MeshBasicMaterial({
 color:Grey
 	});
-            set_material_alpha(plane_material, 50);
 		    camera_1 = 
 		    new THREE.Camera(70, 1.5, 1, 1000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.y = 300;
-            camera_1.position.z = 500;
 	    cube_1_cube = new THREE.Cube(200, 200, 200, 1, 1, 1, materials, null, null) ;
 	    cube_1 = new THREE.Mesh(cube_1_cube, new THREE.MeshFaceMaterial());
 	    scene.addObject(cube_1);
 		cube_1.events = new ev.EventHolder();
-            cube_1.position.y = 150;
 	    plane_1_plane = new THREE.Plane(200, 200, null, null) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, plane_material);
 	    scene.addObject(plane_1);
 		plane_1.events = new ev.EventHolder();
-            set_rotation_x(plane_1.rotation, -90);
 	var __sound_3d1 = new THREE.Sound(scene.streamer.get_resource('sounds/forest.wav').asset
 	,700,20,true
 	);
 	scene.addObject(__sound_3d1);
 	__sound_3d1.play();
+            set_material_alpha(plane_material, 50);
+            camera_1.position.y = 300;
+            camera_1.position.z = 500;
+            cube_1.position.y = 150;
+            set_rotation_x(plane_1.rotation, -90);
             application.x_target_rotation = 0;
             application.x_target_rotation_on_mouse_down = 0;
             application.mouse_x = 0;
