--- a/xss/production/test/wgl_icosahedron.html
+++ b/xss/production/test/wgl_icosahedron.html
@@ -12,13 +12,14 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
 <script type="text/javascript">		
-var ui;
+var ui_;
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 var renderer = new THREE.WebGLRenderer( { antialias: false } );
 var canvas_position = {x:0, y:0};
@@ -92,11 +93,34 @@ map:THREE.ImageUtils.loadTexture(scene.streamer.get_resource('images/shadow.png'
 		    camera_1 = 
 		    new THREE.Camera(40, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.z = 1800;
 	    icosahedron_1_icosahedron = new THREE.Icosahedron(1) ;
 	    icosahedron_1 = new THREE.Mesh(icosahedron_1_icosahedron, mat_1);
 	    scene.addObject(icosahedron_1);
 		icosahedron_1.events = new ev.EventHolder();
+	    icosahedron_2_icosahedron = new THREE.Icosahedron(1) ;
+	    icosahedron_2 = new THREE.Mesh(icosahedron_2_icosahedron, mat_2);
+	    scene.addObject(icosahedron_2);
+		icosahedron_2.events = new ev.EventHolder();
+	    icosahedron_3_icosahedron = new THREE.Icosahedron(1) ;
+	    icosahedron_3 = new THREE.Mesh(icosahedron_3_icosahedron, mat_3);
+	    scene.addObject(icosahedron_3);
+		icosahedron_3.events = new ev.EventHolder();
+	    plane_1_plane = new THREE.Plane(300, 300, null, null) ;
+	    plane_1 = new THREE.Mesh(plane_1_plane, shadow_mat);
+	    scene.addObject(plane_1);
+		plane_1.events = new ev.EventHolder();
+	    plane_2_plane = new THREE.Plane(300, 300, null, null) ;
+	    plane_2 = new THREE.Mesh(plane_2_plane, shadow_mat);
+	    scene.addObject(plane_2);
+		plane_2.events = new ev.EventHolder();
+	    plane_3_plane = new THREE.Plane(300, 300, null, null) ;
+	    plane_3 = new THREE.Mesh(plane_3_plane, shadow_mat);
+	    scene.addObject(plane_3);
+		plane_3.events = new ev.EventHolder();
+	    light_1 = 
+	    new THREE.DirectionalLight(White, null, null, null) ;
+	    scene.addLight(light_1);
+            camera_1.position.z = 1800;
             icosahedron_1.position.x = -450;
             icosahedron_1.scale.x = 200;
             icosahedron_1.scale.y = 200;
@@ -109,10 +133,6 @@ set_rotation_z(icosahedron_1.rotation, get_rotation_z(icosahedron_1.rotation) + 
 	}
 	);
 		application.are_obj_events = true;
-	    icosahedron_2_icosahedron = new THREE.Icosahedron(1) ;
-	    icosahedron_2 = new THREE.Mesh(icosahedron_2_icosahedron, mat_2);
-	    scene.addObject(icosahedron_2);
-		icosahedron_2.events = new ev.EventHolder();
             icosahedron_2.scale.x = 200;
             icosahedron_2.scale.y = 200;
             icosahedron_2.scale.z = 200;
@@ -124,10 +144,6 @@ set_rotation_z(icosahedron_2.rotation, get_rotation_z(icosahedron_2.rotation) + 
 	}
 	);
 		application.are_obj_events = true;
-	    icosahedron_3_icosahedron = new THREE.Icosahedron(1) ;
-	    icosahedron_3 = new THREE.Mesh(icosahedron_3_icosahedron, mat_3);
-	    scene.addObject(icosahedron_3);
-		icosahedron_3.events = new ev.EventHolder();
             icosahedron_3.position.x = 450;
             icosahedron_3.scale.x = 200;
             icosahedron_3.scale.y = 200;
@@ -140,29 +156,14 @@ set_rotation_z(icosahedron_3.rotation, get_rotation_z(icosahedron_3.rotation) + 
 	}
 	);
 		application.are_obj_events = true;
-	    plane_1_plane = new THREE.Plane(300, 300, null, null) ;
-	    plane_1 = new THREE.Mesh(plane_1_plane, shadow_mat);
-	    scene.addObject(plane_1);
-		plane_1.events = new ev.EventHolder();
             set_rotation_x(plane_1.rotation, -90);
             plane_1.position.x = -450;
             plane_1.position.y = -250;
-	    plane_2_plane = new THREE.Plane(300, 300, null, null) ;
-	    plane_2 = new THREE.Mesh(plane_2_plane, shadow_mat);
-	    scene.addObject(plane_2);
-		plane_2.events = new ev.EventHolder();
             set_rotation_x(plane_2.rotation, -90);
             plane_2.position.y = -250;
-	    plane_3_plane = new THREE.Plane(300, 300, null, null) ;
-	    plane_3 = new THREE.Mesh(plane_3_plane, shadow_mat);
-	    scene.addObject(plane_3);
-		plane_3.events = new ev.EventHolder();
             set_rotation_x(plane_3.rotation, -90);
             plane_3.position.x = 450;
             plane_3.position.y = -250;
-	    light_1 = 
-	    new THREE.DirectionalLight(White, null, null, null) ;
-	    scene.addLight(light_1);
             light_1.position.z = 1;
             application.mouseX = 0;
             application.mouseY = 0;
