--- a/xss/production/test/wgl_model.html
+++ b/xss/production/test/wgl_model.html
@@ -13,13 +13,14 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
 <script type="text/javascript">		
-var ui;
+var ui_;
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 var renderer = new THREE.WebGLRenderer( { antialias: false } );
 var canvas_position = {x:0, y:0};
@@ -95,15 +96,12 @@ threejs_load_resources(streamer, function()
 		    camera_1 = 
 		    new THREE.Camera(75, 1.5, 1, 100000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.z = 500;
 	    a_ligth = 
 	    new THREE.AmbientLight(2232576) ;
 	    scene.addLight(a_ligth);
 	    d_ligth_1 = 
 	    new THREE.DirectionalLight(16772829, null, null, null) ;
 	    scene.addLight(d_ligth_1);
-            d_ligth_1.position.y = -70;
-            d_ligth_1.position.z = 100;
 	male_model = new THREE.Object3D();
 	var male_model_loader = 
 	generate_model_loader(scene.streamer.get_resource('model/male02/Male02_slim.js').type);
@@ -156,6 +154,9 @@ threejs_load_resources(streamer, function()
 	}
 	);
 		application.are_obj_events = true;
+            camera_1.position.z = 500;
+            d_ligth_1.position.y = -70;
+            d_ligth_1.position.z = 100;
             application.mouse_x = null;
             application.mouse_y = null;
 	application.events.addListener("updates", function()
