--- a/xss/production/test/wgl_package.html
+++ b/xss/production/test/wgl_package.html
@@ -13,13 +13,14 @@
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/RequestAnimationFrame.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
 <script type="text/javascript">		
-var ui;
+var ui_;
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 var renderer = new THREE.WebGLRenderer( { antialias: false } );
 var canvas_position = {x:0, y:0};
@@ -138,48 +139,63 @@ threejs_load_resources(streamer, function()
 		    camera_1 = 
 		    new THREE.Camera(45, 1.5, 1, 10000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.x = 500;
-            camera_1.position.y = 500;
-            camera_1.position.z = 1000;
 	    plane_1_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_1 = new THREE.Mesh(plane_1_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_1);
 		plane_1.events = new ev.EventHolder();
-            plane_1.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test1.png").asset);
-            plane_1.position.x = 100;
-            plane_1.position.y = 100;
 	    plane_2_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_2 = new THREE.Mesh(plane_2_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_2);
 		plane_2.events = new ev.EventHolder();
-            plane_2.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test2.png").asset);
-            plane_2.position.x = 300;
-            plane_2.position.y = 100;
 	    plane_3_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_3 = new THREE.Mesh(plane_3_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_3);
 		plane_3.events = new ev.EventHolder();
-            plane_3.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test3.png").asset);
-            plane_3.position.x = 100;
-            plane_3.position.y = 300;
 				pack_1.events.addListener("loaded", function()
 				{				
 			    container = new THREE.Object3D() ;
 			container.events = new ev.EventHolder();
+});				
+				pack_1.events.addListener("loaded", function()
+				{				
 	    plane_4_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_4 = new THREE.Mesh(plane_4_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_4);
 		plane_4.events = new ev.EventHolder();
 				container.addChild(plane_4);
 				scene.addObject(container);
-            plane_4.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test4.png").asset);
-            plane_4.position.x = -100;
+});				
+				pack_1.events.addListener("loaded", function()
+				{				
 	    plane_5_plane = new THREE.Plane(128, 164, null, null) ;
 	    plane_5 = new THREE.Mesh(plane_5_plane, new THREE.MeshBasicMaterial());
 	    scene.addObject(plane_5);
 		plane_5.events = new ev.EventHolder();
 				container.addChild(plane_5);
 				scene.addObject(container);
+});
+            camera_1.position.x = 500;
+            camera_1.position.y = 500;
+            camera_1.position.z = 1000;
+            plane_1.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test1.png").asset);
+            plane_1.position.x = 100;
+            plane_1.position.y = 100;
+            plane_2.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test2.png").asset);
+            plane_2.position.x = 300;
+            plane_2.position.y = 100;
+            plane_3.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test3.png").asset);
+            plane_3.position.x = 100;
+            plane_3.position.y = 300;
+				pack_1.events.addListener("loaded", function()
+				{
+});
+				pack_1.events.addListener("loaded", function()
+				{
+            plane_4.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test4.png").asset);
+            plane_4.position.x = -100;
+});
+				pack_1.events.addListener("loaded", function()
+				{
             plane_5.materials[0].map = THREE.ImageUtils.loadTexture(scene.streamer.get_resource("images/test5.png").asset);
             plane_5.position.x = -400;
 });
