--- a/xss/production/test/wgl_refraction_cube.html
+++ b/xss/production/test/wgl_refraction_cube.html
@@ -19,7 +19,7 @@
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
 <script type="text/javascript">		
-var ui;
+var ui_;
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 var renderer = new THREE.WebGLRenderer( { antialias: false } );
 var canvas_position = {x:0, y:0};
@@ -78,12 +78,12 @@ color:White,envMap:t_cube1,refractionRatio:0.949999988
 		    camera_1 = 
 		    new THREE.Camera(60, 1.5, 1, 100000, null) ;	
 		active_camera = camera_1;
-            camera_1.position.z = 3200;
 		THREE.SceneUtils.addPanoramaCubeWebGL( 
 									scene,
 									100000, 
 									t_cube1 
 									);		
+            camera_1.position.z = 3200;
             application.mouse_x = null;
             application.mouse_y = null;
             application.spheres = [];
